--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ body {
   font-weight: 600;
   margin: 0;
 }
+/* BG icons */
 .bgIcons {
   display: flex;
   width: 100%;
@@ -216,6 +217,7 @@ body {
   font-size: 16px;
   font-weight: 500;
 }
+/* Hero box */
 .heroBox {
   display: flex;
   flex-direction: column;
@@ -361,9 +363,183 @@ body {
   gap: 30px;
 }
 /* End of Our Features */
+/* Marketplace */
 .marketplace {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   width: 80%;
   margin: auto;
   background-color: rgba(255, 255, 255, 1);
   margin-top: 120px;
+}
+.marketplaceDescript {
+  width: 50%;
+  margin: auto;
+  font-size: 18px;
+  font-weight: 400;
+  text-align: center;
+  margin-top: 40px;
+}
+.row1 {
+  display: flex;
+  padding-top: 60px;
+  width: 100%;
+  margin: auto;
+}
+.row2 {
+  display: flex;
+  width: 100%;
+  margin: auto;
+}
+.graphicDesign {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: rgba(186, 173, 192, 0.05);
+  height: 363px;
+  flex: 1;
+  border-radius: 5px;
+}
+.cardJobImg {
+  margin-top: 89px;
+}
+.cardJobTitle {
+  padding-top: 30px;
+  margin: 0;
+  font-size: 32px;
+  font-weight: 500;
+  color: rgba(12, 21, 35, 1);
+}
+.cardJobDetail {
+  padding-top: 20px;
+  margin: 0;
+  font-size: 18px;
+  font-weight: 500;
+  color: rgba(12, 21, 35, 1, 0.7);
+}
+/* Start Up */
+.startUp {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 80%;
+  margin: auto;
+  padding-top: 90px;
+}
+.startupText {
+  display: flex;
+  flex-direction: column;
+  margin-left: 13px;
+}
+.genTitleDescript {
+  font-size: 18px;
+  font-weight: 400;
+  color: rgba(12, 21, 35, 1);
+}
+
+.startupButton {
+  width: 127px;
+  height: 49px;
+  background-color: rgba(12, 21, 35, 1);
+  border: none;
+  border-radius: 9px;
+  color: rgba(250, 251, 255, 1);
+  margin-right: 63px;
+}
+/* End of start up */
+/* Recent review */
+.checkReview {
+  display: flex;
+  height: 898px;
+  width: 100%;
+  background-color: rgba(250, 251, 255, 1);
+  margin-top: 130px;
+}
+.checkReviewBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+  margin: auto;
+  height: 658px;
+}
+.reviewTitle {
+  margin: 0;
+}
+.recentReview {
+  display: flex;
+  gap: 30px;
+}
+.genReview {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  height: 452px;
+  border: 1px solid rgba(65, 245, 192, 0.2);
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 1);
+  flex: 1;
+}
+.reviewStar {
+  width: 84px;
+  height: 50px;
+  border-radius: 13px;
+  border: 1px solid rgba(255, 212, 102, 1);
+  margin-top: 35px;
+}
+.reviewNum {
+  font-size: 18px;
+  font-weight: 400;
+  color: rgba(248, 178, 0, 1);
+}
+.reviewDescript {
+  margin: 0;
+  padding-top: 56px;
+}
+.maleReview {
+  padding-top: 55px;
+}
+.whoseReview {
+  font-size: 18px;
+  font-weight: 500;
+}
+.jobPosition {
+  font-size: 14px;
+  font-weight: 500;
+}
+/* End of check review */
+/* Footer */
+.footerbox {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  width: 100%;
+  margin-top: 50px;
+}
+
+.footerContact {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 80%;
+  margin: auto;
+  height: 80px;
+}
+
+.muradEmail {
+  font-size: 24px;
+  font-weight: 500;
+}
+.footerMedia {
+  gap: 20px;
+}
+.Copyright {
+  gap: 15px;
+  width: 100%;
+  height: 80px;
+  background-color: rgba(65, 245, 192, 1);
+}
+.muradCopy {
+  margin: 0;
 }
