--- a/src/App.css
+++ b/src/App.css
@@ -370,6 +370,7 @@ body {
   flex-direction: column;
   width: 80%;
   margin: auto;
+
   background-color: rgba(255, 255, 255, 1);
   margin-top: 120px;
 }
@@ -392,11 +393,14 @@ body {
   width: 100%;
   margin: auto;
 }
+.graphicDesign.color {
+  background-color: rgba(186, 173, 192, 0.05);
+}
 .graphicDesign {
   display: flex;
   align-items: center;
   flex-direction: column;
-  background-color: rgba(186, 173, 192, 0.05);
+  background-color: rgba(255, 255, 255, 1);
   height: 363px;
   flex: 1;
   border-radius: 5px;
@@ -418,6 +422,9 @@ body {
   font-weight: 500;
   color: rgba(12, 21, 35, 1, 0.7);
 }
+/* .extraColors.color {
+  background: rgba(186, 173, 192, 0.05);
+} */
 /* Start Up */
 .startUp {
   display: flex;
